Updates to the gitignore and minor fixes to server.js

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,8 @@ bower_components
 
 # node-waf configuration
 server/config/config.json
+server/config/server-keys.txt
+
 .lock-wscript
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
