--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "crypto-js": "^3.1.9-1",
     "expect": "^1.20.2",
     "express": "^4.16.2",
